Fix buttons overflow text in mobile

--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -1,15 +1,9 @@
 .button {
-    position: relative;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
     font-size: 1rem;
     font-weight: 600;
     border-radius: 8px;
-    max-width: 40%;
     padding: 0;
     cursor: pointer;
-    appearance: none;
     background: $dark-background-secondary;
 
     & {
